<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driver_profile"
    >


    <ImageView
        android:layout_width="171dp"
        android:layout_height="151dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="524dp">

    </ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="249dp"
        android:layout_marginBottom="451dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="226dp"
        android:layout_height="37dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="-7dp"
        android:textColor="@color/black"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="-18dp"
        android:layout_marginBottom="-97dp"
        android:text="@string/salary"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="230dp"
        android:layout_height="37dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textColor="@color/black"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="-106dp"
        android:text="@string/bus_number"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/black" />


</RelativeLayout>